RESOLVED FIXED306832
REGRESSION(306661@main): No member named 'protectedImmersive' in 'WebCore::Document'
https://bugs.webkit.org/show_bug.cgi?id=306832
Summary REGRESSION(306661@main): No member named 'protectedImmersive' in 'WebCore::Do...
Chris Dumez
Reported 2026-02-02 20:38:54 PST
306661@main broke the VisionOS build.
Attachments
Chris Dumez
Comment 1 2026-02-02 20:38:56 PST
Chris Dumez
Comment 2 2026-02-02 20:39:53 PST
EWS
Comment 3 2026-02-02 20:43:20 PST
Committed 306679@main (10f8087013b7): <https://commits.webkit.org/306679@main> Reviewed commits have been landed. Closing PR #57750 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.