REGRESSION(306661@main): No member named 'protectedImmersive' in 'WebCore::Document' https://bugs.webkit.org/show_bug.cgi?id=306832 rdar://169501287

Unreviewed, fix the VisionOS build after 306661@main.

* Source/WebCore/Modules/model-element/HTMLModelElement.cpp:
(WebCore::HTMLModelElement::deleteModelPlayer):
(WebCore::HTMLModelElement::requestImmersive):
* Source/WebCore/page/Page.cpp:
(WebCore::Page::updateRendering):

Canonical link: https://commits.webkit.org/306679@main